// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component renders correctly 1`] = `
<div>
  <div
    class="Tabs-root-1"
  >
    <div
      class="Tabs-TabsBar-7"
    >
      <div
        class="Container-root-11"
      >
        <div
          class="MuiContainer-root Tabs-ContainerRoot-2 MuiContainer-maxWidthXl"
        >
          <div
            class="MuiTabs-root Tabs-TabsRoot-3"
          >
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
            <div
              class="MuiTabs-scrollable"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-scrollable"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-0"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-4 Mui-selected"
                  data-testid="tab-0"
                  id="tab-0"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 1
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-1"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-4"
                  data-testid="tab-1"
                  id="tab-1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 2
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-13 PrivateTabIndicator-colorPrimary-14 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-0"
      class="MuiGrid-root Tabs-TabPanel-5 MuiGrid-item"
      data-testid="tabpanel-0"
      heading="Tab 1"
      id="tabpanel-0"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-19 Tabs-TabPanelBox-6"
      >
        Content One
      </div>
    </div>
    <div
      aria-labelledby="tab-1"
      class="MuiGrid-root Tabs-TabPanel-5 MuiGrid-item"
      data-testid="tabpanel-1"
      heading="Tab 2"
      hidden=""
      id="tabpanel-1"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-20 Tabs-TabPanelBox-6"
      >
        Content Two
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs component renders correctly when one tab is false 1`] = `
<div>
  <div
    class="Tabs-root-81"
  >
    <div
      class="Tabs-TabsBar-87"
    >
      <div
        class="Container-root-91"
      >
        <div
          class="MuiContainer-root Tabs-ContainerRoot-82 MuiContainer-maxWidthXl"
        >
          <div
            class="MuiTabs-root Tabs-TabsRoot-83"
          >
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
            <div
              class="MuiTabs-scrollable"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-scrollable"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-0"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-84 Mui-selected"
                  data-testid="tab-0"
                  id="tab-0"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 1
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-93 PrivateTabIndicator-colorPrimary-94 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-0"
      class="MuiGrid-root Tabs-TabPanel-85 MuiGrid-item"
      data-testid="tabpanel-0"
      heading="Tab 1"
      id="tabpanel-0"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-99 Tabs-TabPanelBox-86"
      >
        Content One
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs component renders correctly when visibleUntil is set to md  1`] = `
<div>
  <div
    class="Tabs-root-100 Tabs-visibleUntilmd-108"
  >
    <div
      class="Tabs-TabsBar-106"
    >
      <div
        class="Container-root-110"
      >
        <div
          class="MuiContainer-root Tabs-ContainerRoot-101 MuiContainer-maxWidthXl"
        >
          <div
            class="MuiTabs-root Tabs-TabsRoot-102"
          >
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
            <div
              class="MuiTabs-scrollable"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-scrollable"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-0"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-103 Mui-selected"
                  data-testid="tab-0"
                  id="tab-0"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 1
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-1"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-103"
                  data-testid="tab-1"
                  id="tab-1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 2
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-112 PrivateTabIndicator-colorPrimary-113 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-0"
      class="MuiGrid-root Tabs-TabPanel-104 MuiGrid-item"
      data-testid="tabpanel-0"
      heading="Tab 1"
      id="tabpanel-0"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-118 Tabs-TabPanelBox-105"
      >
        Content One
      </div>
    </div>
    <div
      aria-labelledby="tab-1"
      class="MuiGrid-root Tabs-TabPanel-104 MuiGrid-item"
      data-testid="tabpanel-1"
      heading="Tab 2"
      hidden=""
      id="tabpanel-1"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-119 Tabs-TabPanelBox-105"
      >
        Content Two
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs component renders correctly when visibleUntil is set to sm  1`] = `
<div>
  <div
    class="Tabs-root-120 Tabs-visibleUntilsm-129"
  >
    <div
      class="Tabs-TabsBar-126"
    >
      <div
        class="Container-root-130"
      >
        <div
          class="MuiContainer-root Tabs-ContainerRoot-121 MuiContainer-maxWidthXl"
        >
          <div
            class="MuiTabs-root Tabs-TabsRoot-122"
          >
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
            <div
              class="MuiTabs-scrollable"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-scrollable"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-0"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-123 Mui-selected"
                  data-testid="tab-0"
                  id="tab-0"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 1
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-1"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-123"
                  data-testid="tab-1"
                  id="tab-1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 2
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-132 PrivateTabIndicator-colorPrimary-133 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-0"
      class="MuiGrid-root Tabs-TabPanel-124 MuiGrid-item"
      data-testid="tabpanel-0"
      heading="Tab 1"
      id="tabpanel-0"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-138 Tabs-TabPanelBox-125"
      >
        Content One
      </div>
    </div>
    <div
      aria-labelledby="tab-1"
      class="MuiGrid-root Tabs-TabPanel-124 MuiGrid-item"
      data-testid="tabpanel-1"
      heading="Tab 2"
      hidden=""
      id="tabpanel-1"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-139 Tabs-TabPanelBox-125"
      >
        Content Two
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs component renders secondary theme correctly 1`] = `
<div>
  <div
    class="Tabs-root-41 Tabs-secondary-48"
  >
    <div
      class="Tabs-TabsBar-47"
    >
      <div
        class="Container-root-51"
      >
        <div
          class="MuiContainer-root Tabs-ContainerRoot-42 MuiContainer-maxWidthXl"
        >
          <div
            class="MuiTabs-root Tabs-TabsRoot-43"
          >
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
            <div
              class="MuiTabs-scrollable"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-scrollable"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-0"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-44 Mui-selected"
                  data-testid="tab-0"
                  id="tab-0"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 1
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-1"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-44"
                  data-testid="tab-1"
                  id="tab-1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 2
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-53 PrivateTabIndicator-colorPrimary-54 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-0"
      class="MuiGrid-root Tabs-TabPanel-45 MuiGrid-item"
      data-testid="tabpanel-0"
      heading="Tab 1"
      id="tabpanel-0"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-59 Tabs-TabPanelBox-46"
      >
        Content One
      </div>
    </div>
    <div
      aria-labelledby="tab-1"
      class="MuiGrid-root Tabs-TabPanel-45 MuiGrid-item"
      data-testid="tabpanel-1"
      heading="Tab 2"
      hidden=""
      id="tabpanel-1"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-60 Tabs-TabPanelBox-46"
      >
        Content Two
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs component triggers onChange 1`] = `
Array [
  Array [
    "tabTwo",
  ],
]
`;
